# AutoAssist-Site

./: .dockerignore  .gitignore  .railway-trigger  ALL_FILES_SUMMARY.md  CHANGES_SUMMARY.txt  CLEANUP_COMPLETE.md  CLEANUP_PLAN.md  CLEAR_RAILWAY_CACHE.md  CLOUDFLARE_PAGES_DEPLOYMENT.md  COMPLETE_CONFIGURATION_SUMMARY.md  COMPLETE_DEPLOYMENT_GUIDE.md  COMPLETE_RAILWAY_INTEGRATION.md  COMPLETE_SYSTEM_STATUS.md  CONFIGURATION_COMPLETE.txt  COPY_PASTE_CONFIGS.md  CRITICAL_FIX_SUMMARY.md  DATABASE_SETUP_COMPLETE.txt  DELIVERABLES_CHECKLIST.md  DEPLOYMENT_COMPLETE_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_REQUIREMENTS_CHECKLIST.md  DEPLOY_FRESH.sh  DEPLOY_NOW.md  DEPLOY_NOW_RENDER.md  DOCKERFILE_FIXED.md  Dockerfile  Dockerfile.render  EMAIL_MARKETING_IMPLEMENTATION.md  EMAIL_SYSTEM_READY.txt  EMAIL_TEST_INSTRUCTIONS.md  ENHANCED_IMPLEMENTATION_SUMMARY.md  EXACT_COMMANDS.sh  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY.txt  FINAL_AUDIT_STATUS.md  FINAL_CHECKLIST.md  FINAL_CONFIGURATION_STATUS.md  FINAL_DELIVERY_SUMMARY.md  FINAL_DEPLOYMENT_READY.md  (+84 more)
autoassist-api/: .env.example  .env.railway  .gitignore  .railwayignore  Cargo.toml  Dockerfile  README.md  README_RAILWAY.md  test-email.sh  test-professional-email.sh
autoassist-api/migrations/: 001_create_leads_table.sql
autoassist-api/src/: config.rs  db.rs  email.rs  email_templates.rs  errors.rs  handlers.rs  main.rs  models.rs  rate_limit.rs
autoassist-frontend/: .env  .env.example  .env.production  .eslintrc.cjs  ALL_FIXES_SUMMARY.md  COMPLETE_SOLUTION.md  DEPENDENCY_FIX_GUIDE.md  DESIGN_SYSTEM.md  (+17 more)
(+32 files in other folders)
